#16: delete stock
